--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -7,10 +7,16 @@ encoding//current_system/controller/CurrentController.py=UTF-8
 encoding//current_system/dao/CurrentDao.py=UTF-8
 encoding//current_system/service/CurrentService.py=UTF-8
 encoding//eol_system/controller/EolController.py=UTF-8
+encoding//hsh_backstage/controller/AlertController.py=UTF-8
 encoding//hsh_backstage/controller/CurrentSystemController.py=UTF-8
 encoding//hsh_backstage/controller/MainController.py=UTF-8
+encoding//hsh_backstage/controller/SpareController.py=UTF-8
+encoding//hsh_backstage/dao/AlertDao.py=UTF-8
 encoding//hsh_backstage/dao/CurrentSystemDao.py=UTF-8
+encoding//hsh_backstage/dao/SpareDao.py=UTF-8
+encoding//hsh_backstage/service/AlertService.py=UTF-8
 encoding//hsh_backstage/service/CurrentSystemService.py=UTF-8
+encoding//hsh_backstage/service/SpareService.py=UTF-8
 encoding//util/Aop.py=utf-8
 encoding//util/Base64.py=utf-8
 encoding//util/BaseDao.py=utf-8
