--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -9,14 +9,19 @@ encoding//current_system/service/CurrentService.py=UTF-8
 encoding//eol_system/controller/EolController.py=UTF-8
 encoding//hsh_backstage/controller/AlertController.py=UTF-8
 encoding//hsh_backstage/controller/CurrentSystemController.py=UTF-8
+encoding//hsh_backstage/controller/DocController.py=UTF-8
 encoding//hsh_backstage/controller/MainController.py=UTF-8
 encoding//hsh_backstage/controller/SpareController.py=UTF-8
+encoding//hsh_backstage/controller/TipController.py=UTF-8
 encoding//hsh_backstage/dao/AlertDao.py=UTF-8
 encoding//hsh_backstage/dao/CurrentSystemDao.py=UTF-8
+encoding//hsh_backstage/dao/DocDao.py=UTF-8
 encoding//hsh_backstage/dao/SpareDao.py=UTF-8
 encoding//hsh_backstage/service/AlertService.py=UTF-8
 encoding//hsh_backstage/service/CurrentSystemService.py=UTF-8
+encoding//hsh_backstage/service/DocService.py=UTF-8
 encoding//hsh_backstage/service/SpareService.py=UTF-8
+encoding//hsh_backstage/service/TipService.py=UTF-8
 encoding//util/Aop.py=utf-8
 encoding//util/Base64.py=utf-8
 encoding//util/BaseDao.py=utf-8
